fixed layout issue with Message.js, changed the styling for the message input and send message button

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,7 @@ button {
     font-size: 16px;
     background-color: white;
     border-radius: 5px;
+    border: none;
 }
 
 button:hover {
