--- a/src/Components/Groups/Groups.scss
+++ b/src/Components/Groups/Groups.scss
@@ -8,6 +8,5 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    padding: 10px;
     background-color: $accent-color;
 }
