--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,6 +3,7 @@
 .header {
     height: 75px;
     box-sizing: border-box;
+    margin-top: 10px;
     padding-left: 10px;
     display: flex;
     align-items: center;
