--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -16,6 +16,8 @@
     position: absolute;
     bottom: 0px;
     left: 0px;
+    border-top: 1px solid black;
+    background-color: white;
 }
 
 .send-message-button {
@@ -24,4 +26,6 @@
     position: absolute;
     bottom: 0px;
     right: 0px;
+    border-radius: 0px;
+    border: 1px solid black;
 }
